feat : basically redesigned everything from addding all icons to changeing some small but major things and redesigned contact and uploaded my photo

--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
     <meta name="keywords"
         content="arun, arun neupane, arun dada , arundada9000, arunneupane20, about arun , who is arun neupane" />
 
+    <link rel="shortcut icon" href="./images/about.webp" type="image/x-icon">
     <link rel="stylesheet" href="./styles.css">
     <style>
         body {
@@ -57,6 +58,18 @@
         .signature span {
             font-weight: bold;
         }
+
+        .code-link {
+            width: 100%;
+            text-align: center !important;
+            font-size: 1.2rem;
+        }
+
+        .code-link a {
+            color: black;
+            text-decoration: none;
+            font-weight: bold;
+        }
     </style>
     <link rel="stylesheet" href="./footer.css">
 </head>
@@ -75,8 +88,6 @@
             <a href="./discount.html">Discount</a>
             <a href="./power.html">Power mod</a>
             <a href="./text.html">Text</a>
-            <a href="./contact.html">Contact</a>
-            <a href="./about.html" class="bb">About</a>
         </div>
         <div class="nav-links">
             <a href="./index.html">Home</a>
@@ -89,8 +100,6 @@
             <a href="./discount.html">Discount Calculator</a>
             <a href="./power.html">Power mod Calculator</a>
             <a href="./text.html">Text Styler</a>
-            <a href="./contact.html">Contact Me</a>
-            <a href="./about.html" class="bb">About</a>
         </div>
     </nav>
 
@@ -111,10 +120,15 @@
         <p>
             The app supports a wide range of unit conversions, all within one simple platform. It was created with the
             user in mind, and we're always looking for ways to improve it, so feel free to provide feedback!
+            <br>
+            Technology Used : Vanilla html , css , js.
         </p>
 
         <p class="signature">
             Made with ❤️ by <span>Arun Neupane</span>
+        </p>
+        <p class="code-link">
+            Source code available here <a href="https://github.com/arundada9000/Unit-Converter">Code</a>
         </p>
     </div>
 
