--- a/data.html
+++ b/data.html
@@ -9,9 +9,9 @@
         content="Easily convert data units such as bytes, kilobytes, megabytes, gigabytes, and more. Fast and accurate data unit conversion." />
     <meta name="keywords"
         content="data converter, bytes to kilobytes, data unit conversion, megabytes converter, data calculator,real time data converter" />
-
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./footer.css">
+    <link rel="shortcut icon" href="./images/data.webp" type="image/x-icon">
 </head>
 
 <body>
@@ -28,7 +28,6 @@
             <a href="./discount.html">Discount</a>
             <a href="./power.html">Power mod</a>
             <a href="./text.html">Text</a>
-            <a href="./contact.html">Contact</a>
         </div>
         <div class="nav-links">
             <a href="./index.html">Home</a>
@@ -41,13 +40,12 @@
             <a href="./discount.html">Discount Calculator</a>
             <a href="./power.html">Power mod Calculator</a>
             <a href="./text.html">Text Styler</a>
-            <a href="./contact.html">Contact Me</a>
         </div>
     </nav>
 
     <div class="container">
         <h1>Data Converter</h1>
-        <input type="text" name="input-value" id="input-value" placeholder="Enter number" title="Enter desired data">
+        <input type="number" name="input-value" id="input-value" placeholder="Enter number" title="Enter desired data">
         <select name="input-type" id="input-type" title="Select data type">
             <option value="bit">Bit</option>
             <option value="b">Byte (b)</option>
@@ -57,7 +55,7 @@
             <option value="tb">Terabyte (tb)</option>
             <option value="pb">Petabyte (pb)</option>
         </select> <br>
-        <input type="text" id="output-value" placeholder="Converted value" name="output-value" title="Result box">
+        <input type="number" id="output-value" placeholder="Converted value" name="output-value" title="Result box">
         <select name="output-type" id="output-type" title="Select data type">
             <option value="bit">Bit</option>
             <option value="b">Byte (b)</option>
