--- a/discount.html
+++ b/discount.html
@@ -10,6 +10,7 @@
     <meta name="keywords"
         content="discount calculator, real time discount calculator, price after discount, cost price calculator,real time" />
 
+    <link rel="shortcut icon" href="./images/discount.webp" type="image/x-icon">
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./footer.css">
 </head>
@@ -28,7 +29,6 @@
             <a href="./discount.html" class="bb">Discount</a>
             <a href="./power.html">Power mod</a>
             <a href="./text.html">Text</a>
-            <a href="./contact.html">Contact</a>
         </div>
         <div class="nav-links">
             <a href="./index.html">Home</a>
@@ -41,7 +41,6 @@
             <a href="./discount.html">Discount Calculator</a>
             <a href="./power.html">Power mod Calculator</a>
             <a href="./text.html">Text Styler</a>
-            <a href="./contact.html">Contact Me</a>
         </div>
     </nav>
 
@@ -50,12 +49,12 @@
         <p>Enter the original price and discount percentage.<br>It will automatically calculate the result.</p>
         <div>
             <label for="original-price">Original Price</label><br>
-            <input type="text" placeholder="Enter original amount" title="Enter original price" id="original-price">
+            <input type="number" placeholder="Enter original amount" title="Enter original price" id="original-price">
         </div>
         <br>
         <div>
             <label for="discount-percentage">Discount percentage</label> <br>
-            <input type="text" placeholder="Enter discount percentage" title="Enter discount percentage"
+            <input type="number" placeholder="Enter discount percentage" title="Enter discount percentage"
                 id="discount-percentage">
         </div>
         <br>
