--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="keywords"
         content="unit converter, online conversion tool, convert length, mass converter, time converter, easy conversion,real time converter" />
 
+    <link rel="shortcut icon" href="./images/converter.webp" type="image/x-icon">
     <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" href="./footer.css">
 </head>
@@ -17,39 +18,48 @@
 <body>
     <h1>Unit Converter</h1>
     <div class="index-container">
-        <div class="card">
+        <div class="card" onclick='window.location.href = "./data.html"'>
+            <img src="./images/data.png" alt="Data Converter">
             <h2>Data Converter</h2>
             <a href="./data.html">Go to Data Converter</a>
         </div>
-        <div class="card">
+        <div class="card" onclick='window.location.href = "./length.html"'>
+            <img src="./images/length.png" alt="Length Converter">
             <h2>Length Converter</h2>
             <a href="./length.html">Go to Length Converter</a>
         </div>
-        <div class="card">
+        <div class="card" onclick='window.location.href = "./time.html"'>
+            <img src="./images/time.png" alt="Time Converter">
             <h2>Time Converter</h2>
             <a href="./time.html">Go to Time Converter</a>
         </div>
-        <div class="card">
+        <div class="card" onclick='window.location.href = "./mass.html"'>
+            <img src="./images/mass.png" alt="Mass Converter">
             <h2>Mass Converter</h2>
             <a href="./mass.html">Go to Mass Converter</a>
         </div>
-        <div class="card">
+        <div class="card" onclick='window.location.href = "./temperature.html"'>
+            <img src="./images/temperature.png" alt="Temperature Converter">
             <h2>Temperature Converter</h2>
             <a href="./temperature.html">Go to Temperature Converter</a>
         </div>
-        <div class="card">
+        <div class="card" onclick='window.location.href = "./numbersystem.html"'>
+            <img src="./images/number-system.png" alt="Number System Converter">
             <h2>Number System Converter</h2>
             <a href="./numbersystem.html">Go to Number System Converter</a>
         </div>
-        <div class="card">
+        <div class="card" onclick='window.location.href = "./discount.html"'>
+            <img src="./images/discount.png" alt="Discount Calculator">
             <h2>Discount Calculator</h2>
             <a href="./discount.html">Go to Discount Calculator</a>
         </div>
-        <div class="card">
+        <div class="card" onclick='window.location.href = "./power.html"'>
+            <img src="./images/power-mod.png" alt="Power Mod Calculator">
             <h2>Power mod Calculator</h2>
             <a href="./power.html">Go to Power mod Calculator</a>
         </div>
-        <div class="card">
+        <div class="card" onclick='window.location.href = "./text.html"'>
+            <img src="./images/text.png" alt="Text Styler">
             <h2>Text Editor</h2>
             <a href="./text.html">Go to Text editor</a>
         </div>
