--- a/length.html
+++ b/length.html
@@ -10,6 +10,7 @@
     <meta name="keywords"
         content="length converter, meters to kilometers, convert miles, length unit conversion, distance calculator,real time length converter" />
 
+    <link rel="shortcut icon" href="./images/length.webp" type="image/x-icon">
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./footer.css">
 </head>
@@ -28,7 +29,6 @@
             <a href="./discount.html">Discount</a>
             <a href="./power.html">Power mod</a>
             <a href="./text.html">Text</a>
-            <a href="./contact.html">Contact</a>
         </div>
         <div class="nav-links">
             <a href="./index.html">Home</a>
@@ -41,13 +41,12 @@
             <a href="./discount.html">Discount Calculator</a>
             <a href="./power.html">Power mod Calculator</a>
             <a href="./text.html">Text Styler</a>
-            <a href="./contact.html">Contact Me</a>
         </div>
     </nav>
 
     <div class="container">
         <h1>Length Converter</h1>
-        <input type="text" title="Enter length" name="input-value" id="input-value" placeholder="Enter length">
+        <input type="number" title="Enter length" name="input-value" id="input-value" placeholder="Enter length">
         <select name="input-type" id="input-type" title="Click to select">
             <option value="nm">Nanometer</option>
             <option value="mmm">Micrometer</option>
@@ -68,7 +67,7 @@
             <option value="A">Angstrom</option>
         </select>
         <br>
-        <input type="text" name="output-value" id="output-value" title="Output" placeholder="Converted Length">
+        <input type="number" name="output-value" id="output-value" title="Output" placeholder="Converted Length">
 
         <Select name="output-type" id="output-type" title="Click to select">
             <option value="nm">Nanometer</option>
