--- a/mass.html
+++ b/mass.html
@@ -10,6 +10,7 @@
     <meta name="keywords"
         content="mass converter, kilograms to pounds, convert grams, weight converter, mass unit conversion,real time mass converter" />
 
+        <link rel="shortcut icon" href="./images/mass.webp" type="image/x-icon">
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./footer.css">
 </head>
@@ -28,7 +29,6 @@
             <a href="./discount.html">Discount</a>
             <a href="./power.html">Power mod</a>
             <a href="./text.html">Text</a>
-            <a href="./contact.html">Contact</a>
         </div>
         <div class="nav-links">
             <a href="./index.html">Home</a>
@@ -41,13 +41,12 @@
             <a href="./discount.html">Discount Calculator</a>
             <a href="./power.html">Power mod Calculator</a>
             <a href="./text.html">Text Styler</a>
-            <a href="./contact.html">Contact Me</a>
         </div>
     </nav>
 
     <div class="container">
         <h1>Mass Converter</h1>
-        <input type="text" name="input-value" id="input-value" placeholder="Enter mass" title="Enter desired mass">
+        <input type="number" name="input-value" id="input-value" placeholder="Enter mass" title="Enter desired mass">
         <select name="input-type" id="input-type" title="Select mass type">
             <option value="mmg">Microgram(mmg)</option>
             <option value="mg">Milligram(mg)</option>
@@ -63,7 +62,7 @@
             <option value="gr">Grain (gr)</option>
         </select>
         <br>
-        <input type="text" id="output-value" placeholder="Result" name="output-value" title="Result box" readonly>
+        <input type="number" id="output-value" placeholder="Result" name="output-value" title="Result box" readonly>
         <select name="output-type" id="output-type" title="Select mass type">
             <option value="mmg">Microgram(mmg)</option>
             <option value="mg">Milligram(mg)</option>
