--- a/power.html
+++ b/power.html
@@ -9,6 +9,8 @@
         content="Use our power mod calculator to calculate powers and modulos. Fast, accurate, and easy to use." />
     <meta name="keywords"
         content="power mod calculator, modulo calculator, exponent mod, fast mod calculation, power calculator, online mod calculator, online power mod calculator,real time calculator" />
+
+        <link rel="shortcut icon" href="./images/power-mod.webp" type="image/x-icon">
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./footer.css">
     <style>
@@ -34,7 +36,6 @@
             <a href="./discount.html">Discount</a>
             <a href="./power.html" class="bb">Power mod</a>
             <a href="./text.html">Text</a>
-            <a href="./contact.html">Contact</a>
         </div>
         <div class="nav-links">
             <a href="./index.html">Home</a>
@@ -47,7 +48,6 @@
             <a href="./discount.html">Discount Calculator</a>
             <a href="./power.html">Power mod Calculator</a>
             <a href="./text.html">Text Styler</a>
-            <a href="./contact.html">Contact Me</a>
         </div>
     </nav>
 
@@ -56,15 +56,15 @@
         <p>Enter the terms as x to the power y mod n = res and it will automatically calculate the result.</p>
         <div>
             <label for="Enter base">Base (x)</label> <br>
-            <input type="text" placeholder="Base" id="base">
+            <input type="number" placeholder="Base" id="base">
         </div>
         <div>
             <label for="exponent">Exponent (y)</label> <br>
-            <input type="text" id="exponent" placeholder="Enter exponent">
+            <input type="number" id="exponent" placeholder="Enter exponent">
         </div>
         <div>
             <label for="mod">Mod (n)</label> <br>
-            <input type="text" name="mod" id="mod" placeholder="Enter mod">
+            <input type="number" name="mod" id="mod" placeholder="Enter mod">
         </div>
         <p id="result"><span id="x">x</span> <sup><span id="y">y</span></sup> <span id="n">mod n</span> <span id="res">=
                 res</span>
