--- a/privacy.html
+++ b/privacy.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy | Unit Converter</title>
+
+    <link rel="shortcut icon" href="./images/privacy-policy.webp" type="image/x-icon">
     <link rel="stylesheet" href="./footer.css">
     <link rel="stylesheet" href="./styles.css">
+
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -70,8 +73,6 @@
             <a href="./discount.html">Discount</a>
             <a href="./power.html">Power mod</a>
             <a href="./text.html">Text</a>
-            <a href="./contact.html">Contact</a>
-            <a href="./privacy.html" class="bb">Privacy Policy</a>
         </div>
         <div class="nav-links">
             <a href="./index.html">Home</a>
@@ -84,8 +85,6 @@
             <a href="./discount.html">Discount Calculator</a>
             <a href="./power.html">Power mod Calculator</a>
             <a href="./text.html">Text Styler</a>
-            <a href="./contact.html">Contact Me</a>
-            <a href="./privacy.html" class="bb">Privacy Policy</a>
         </div>
     </nav>
 
