--- a/text.html
+++ b/text.html
@@ -9,6 +9,7 @@
         content="Easily style your text such as case change , copy paste and more options in real time." />
     <meta name="keywords" content="text styler, real time text styling , online , copy and paste" />
 
+    <link rel="shortcut icon" href="./images/text.webp" type="image/x-icon">
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./footer.css">
     <style>
@@ -139,7 +140,6 @@
             <a href="./discount.html">Discount</a>
             <a href="./power.html">Power mod</a>
             <a href="./text.html" class="bb">Text</a>
-            <a href="./contact.html">Contact</a>
         </div>
         <div class="nav-links">
             <a href="./index.html">Home</a>
@@ -152,7 +152,6 @@
             <a href="./discount.html">Discount Calculator</a>
             <a href="./power.html">Power mod Calculator</a>
             <a href="./text.html">Text Styler</a>
-            <a href="./contact.html">Contact Me</a>
         </div>
     </nav>
     <div class="container">
