--- a/time.html
+++ b/time.html
@@ -9,6 +9,7 @@
         content="Quickly convert time units such as hours, minutes, seconds, and more. Fast and accurate time conversion." />
     <meta name="keywords"
         content="time converter, hours to minutes, convert seconds, time unit conversion, time calculator,real time converter" />
+    <link rel="shortcut icon" href="./images/time.webp" type="image/x-icon">
 
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./footer.css">
@@ -28,7 +29,6 @@
             <a href="./discount.html">Discount</a>
             <a href="./power.html">Power mod</a>
             <a href="./text.html">Text</a>
-            <a href="./contact.html">Contact</a>
         </div>
         <div class="nav-links">
             <a href="./index.html">Home</a>
@@ -41,13 +41,12 @@
             <a href="./discount.html">Discount Calculator</a>
             <a href="./power.html">Power mod Calculator</a>
             <a href="./text.html">Text Styler</a>
-            <a href="./contact.html">Contact Me</a>
         </div>
     </nav>
 
     <div class="container">
         <h1>Time Converter</h1>
-        <input type="text" name="input-value" id="input-value" placeholder="Enter number" title="Enter desired mass">
+        <input type="number" name="input-value" id="input-value" placeholder="Enter number" title="Enter desired mass">
         <select name="input-type" id="input-type" title="Select time type">
             <option value="fs">femtosecond (fs)</option>
             <option value="ns">Nanosecond (ns)</option>
@@ -66,7 +65,7 @@
             <option value="millennium">Millennium</option>
         </select>
         <br>
-        <input type="text" id="output-value" placeholder="Converted value" name="output-value" title="Result box">
+        <input type="number" id="output-value" placeholder="Converted value" name="output-value" title="Result box">
         <select name="output-type" id="output-type" title="Select time type">
             <option value="fs">femtosecond (fs)</option>
             <option value="ns">Nanosecond (ns)</option>
