--- a/numbersystem.html
+++ b/numbersystem.html
@@ -10,6 +10,7 @@
     <meta name="keywords"
         content="number system converter, binary to decimal, decimal to octal, hexadecimal converter, octal to hexadecimal converter online, real time converter" />
 
+    <link rel="shortcut icon" href="./images/number-system.webp" type="image/x-icon">
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./footer.css">
 </head>
@@ -28,7 +29,6 @@
             <a href="./discount.html">Discount</a>
             <a href="./power.html">Power mod</a>
             <a href="./text.html">Text</a>
-            <a href="./contact.html">Contact</a>
         </div>
         <div class="nav-links">
             <a href="./index.html">Home</a>
@@ -41,7 +41,6 @@
             <a href="./discount.html">Discount Calculator</a>
             <a href="./power.html">Power mod Calculator</a>
             <a href="./text.html">Text Styler</a>
-            <a href="./contact.html">Contact Me</a>
         </div>
     </nav>
     <div class="container">
