--- a/temperature.html
+++ b/temperature.html
@@ -10,6 +10,7 @@
     <meta name="keywords"
         content="temperature converter, Celsius to Fahrenheit, convert Kelvin, temperature unit conversion, online converter, kelvin to celsius,real time converter" />
 
+    <link rel="shortcut icon" href="./images/temperature.webp" type="image/x-icon">
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./footer.css">
 </head>
@@ -28,7 +29,6 @@
             <a href="./discount.html">Discount</a>
             <a href="./power.html">Power mod</a>
             <a href="./text.html">Text</a>
-            <a href="./contact.html">Contact</a>
         </div>
         <div class="nav-links">
             <a href="./index.html">Home</a>
@@ -41,13 +41,12 @@
             <a href="./discount.html">Discount Calculator</a>
             <a href="./power.html">Power mod Calculator</a>
             <a href="./text.html">Text Styler</a>
-            <a href="./contact.html">Contact Me</a>
         </div>
     </nav>
 
     <div class="container">
         <h1>Temperature Converter</h1>
-        <input type="text" name="input-value" id="input-value" placeholder="Enter temperature"
+        <input type="number" name="input-value" id="input-value" placeholder="Enter temperature"
             title="Enter desired type">
         <select name="input-type" id="input-type" title="Select temperature type">
             <option value="c">Celsius (&deg;c)</option>
@@ -57,7 +56,7 @@
             <option value="Re">Reaumur (&deg;Re)</option>
         </select>
         <br>
-        <input type="text" id="output-value" placeholder="Converted value" name="output-value" title="Result box">
+        <input type="number" id="output-value" placeholder="Converted value" name="output-value" title="Result box">
         <select name="output-type" id="output-type" title="Select temperature type">
             <option value="c">Celsius (&deg;c)</option>
             <option value="f">Fahrenheit (&deg;F)</option>
